Fix windowbuttons and mess with scrollbar

--- a/Battlelogium.Core/userstylesheet.css
+++ b/Battlelogium.Core/userstylesheet.css
@@ -5,3 +5,30 @@
 ::-webkit-scrollbar{visibility:hidden} /*Remove scrollbar*/
 #community-bar .outerarrow{display:none} /*Remove game switching arrow*/
 
+::-webkit-scrollbar {
+  height: 0;
+  overflow: visible;
+  width: 10px;  
+  border-left:1px solid rgb(229, 229, 229);
+  background-color: rgba(0, 0, 0, 0.1);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,.07);
+  background-clip: padding-box;    
+  min-height: 28px;
+  padding: 100px 0 0;
+  box-shadow: inset 1px 1px 0 rgba(0,0,0,.1),inset 0 -1px 0 rgba(0,0,0,.08);
+  border-width: 1px 1px 1px 6px;
+}
+::-webkit-scrollbar-button {
+  height: 0;
+  width: 0;
+}
+::-webkit-scrollbar-track {
+  background-clip: padding-box;
+  border: solid transparent;
+  border-width: 0 0 0 4px;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
